--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       left: 0;
       bottom: 0;
       width: 280px;
-      background: #f8f8f8;
+   border-color: #444;
+    background: #2b2b2b;
+    color: #f0f0f0;
       border-right: 1px solid #ccc;
       padding: 10px;
     }
@@ -29,6 +31,7 @@
     #lista-warstw {
       overflow-y: auto;
       flex: 1;
+      border-top: 1px solid #ccc;
     }
     #basemap-switcher {
       position: absolute;
@@ -44,7 +47,7 @@
       overflow-y: auto;
     }
     #wyszukiwarka { width: 80%; margin-bottom: 10px; padding: 5px; flex-shrink: 0; }
-    .pinezka { margin: 7px 0; cursor: pointer; color: #000; font-size: 12px; }
+    .pinezka { margin: 7px 0; cursor: pointer; color: #f0f0f0; font-size: 12px; }
     #narzedzia { margin-bottom: 10px; flex-shrink: 0; }
     .tool-btn { font-size: 24px; background: none; border: none; cursor: pointer; font-family: "Noto Color Emoji", sans-serif; }
     .tool-btn.active { background: #ddd; }
@@ -108,6 +111,30 @@
      .leaflet-dragging .leaflet-grab {
     cursor: grabbing !important;
   }
+    /* Scrollbar – WebKit (Chrome, Edge, Opera, Safari) */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2a2a2a;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 5px;
+  border: 2px solid #2a2a2a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+/* Scrollbar – Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #555 #2a2a2a;
+}
   </style>
 </head>
 <body>
