--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     /* Scrollbar – WebKit (Chrome, Edge, Opera, Safari) */
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -130,8 +131,8 @@
   background-color: #777;
 }
 
-/* Scrollbar – Firefox */
-{
+/* Scrollbar dla Firefox */
+body, #sidebar, #basemap-switcher {
   scrollbar-width: thin;
   scrollbar-color: #555 #2a2a2a;
 }
