--- a/index.html
+++ b/index.html
@@ -111,6 +111,30 @@
      .leaflet-dragging .leaflet-grab {
     cursor: grabbing !important;
   }
+    ::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2a2a2a;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 5px;
+  border: 2px solid #2a2a2a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+/* Scrollbar dla Firefox */
+body, #sidebar, #basemap-switcher {
+  scrollbar-width: thin;
+  scrollbar-color: #555 #2a2a2a;
+}
   </style>
 </head>
 <body>
