--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       font-family: 'Noto Color Emoji', sans-serif;
       font-size: 28px;
       line-height: 32px;
+        text-shadow:
+    -1px -1px 0 #000,
+     1px -1px 0 #000,
+    -1px  1px 0 #000,
+     1px  1px 0 #000;
     }
     #geosearch {
       position: absolute;
