--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@ body, #sidebar, #basemap-switcher {
   margin: 0 0 10px 0;
   color: #f0f0f0;
 }
+    .emoji-sztosy {
+  font-family: 'Noto Color Emoji', sans-serif;
+  font-size: 28px;
+  line-height: 32px;
+  background: linear-gradient(45deg, gold, orange);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  text-shadow:
+    -2px -2px 0 rgba(255, 215, 0, 0.9),
+     2px -2px 0 rgba(255, 165, 0, 0.9),
+    -2px  2px 0 rgba(255, 215, 0, 0.9),
+     2px  2px 0 rgba(255, 165, 0, 0.9);
+}
   </style>
 </head>
 <body>
@@ -298,14 +312,24 @@ body, #sidebar, #basemap-switcher {
       return `${Number(lat).toFixed(5)}, ${Number(lng).toFixed(5)}`;
     }
 
-    function createEmojiIcon(e) {
-      if (!e || e === '📍') {
-        return L.icon({
-          iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
-          iconSize: [25, 41],
-          iconAnchor: [12, 41]
-        });
-      }
+ function createEmojiIcon(e, warstwa = "") {
+  if (!e || e === '📍') {
+    return L.icon({
+      iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
+      iconSize: [25, 41],
+      iconAnchor: [12, 41]
+    });
+  }
+
+  const cls = warstwa === "Sztosy" ? "emoji-sztosy" : "";
+
+  return L.divIcon({
+    className: 'emoji-marker',
+    html: `<span class="${cls}">${e}</span>`,
+    iconSize: [32, 32],
+    iconAnchor: [16, 32]
+  });
+}
       return L.divIcon({
         className: 'emoji-marker',
         html: `<span>${e}</span>`,
@@ -382,7 +406,7 @@ function zaladujPinezkiZFirestore() {
         };
       }
 
-      const marker = L.marker([p.lat, p.lng], { icon: createEmojiIcon(p.emoji) }).addTo(warstwy[warstwaNazwa].layer);
+      const marker = L.marker([p.lat, p.lng], { icon: createEmojiIcon(p.emoji, warstwaNazwa) }).addTo(warstwy[warstwaNazwa].layer);
       const coords = formatCoords(p.lat, p.lng);
 
       const popupDiv = document.createElement("div");
