zloty obrys sztosy fix

--- a/index.html
+++ b/index.html
@@ -186,15 +186,13 @@ body, #sidebar, #basemap-switcher {
   font-family: 'Noto Color Emoji', sans-serif;
   font-size: 28px;
   line-height: 32px;
-  background: linear-gradient(45deg, gold, orange);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   position: relative;
+  color: inherit;
   text-shadow:
-    -2px -2px 0 rgba(255, 215, 0, 0.9),
-     2px -2px 0 rgba(255, 165, 0, 0.9),
-    -2px  2px 0 rgba(255, 215, 0, 0.9),
-     2px  2px 0 rgba(255, 165, 0, 0.9);
+    -2px -2px 0 gold,
+     2px -2px 0 orange,
+    -2px  2px 0 gold,
+     2px  2px 0 orange;
 }
   </style>
 </head>
