zloty obrys fix 69

--- a/index.html
+++ b/index.html
@@ -103,16 +103,20 @@
     -2px  2px 0 gold,
      2px  2px 0 orange;
 }
-    .emoji-marker span {
-      font-family: 'Noto Color Emoji', sans-serif;
-      font-size: 28px;
-      line-height: 32px;
-        text-shadow:
+  .emoji-marker span {
+  font-family: 'Noto Color Emoji', sans-serif;
+  font-size: 28px;
+  line-height: 32px;
+}
+
+.emoji-marker span:not(.emoji-sztosy) {
+  text-shadow:
     -1px -1px 0 #000,
      1px -1px 0 #000,
     -1px  1px 0 #000,
      1px  1px 0 #000;
-    }
+}
+
     #geosearch {
       position: absolute;
       top: 10px;
