--- a/index.html
+++ b/index.html
@@ -98,10 +98,16 @@
   position: relative;
   color: inherit;
   text-shadow:
-    -2px -2px 0 gold,
-     2px -2px 0 orange,
-    -2px  2px 0 gold,
-     2px  2px 0 orange;
+        -2px -2px 0 #000,
+     2px -2px 0 #000,
+    -2px  2px 0 #000,
+     2px  2px 0 #000,
+
+    /* gruby złoty kontur - na wierzchu */
+    -1px -1px 0 gold,
+     1px -1px 0 orange,
+    -1px  1px 0 gold,
+     1px  1px 0 orange;
 }
   .emoji-marker span {
   font-family: 'Noto Color Emoji', sans-serif;
