--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@ body, #sidebar, #basemap-switcher {
   if (!e || e === '📍') {
     return L.icon({
       iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
-      iconSize: [25, 41],
-      iconAnchor: [12, 41]
+      iconSize: [12, 25],       // zmniejszona wielkość
+      iconAnchor: [6, 25]       // środek szerokości, dół wysokości (czubek pinezki)
     });
   }
 
