--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
    <link rel="stylesheet" href="style.css" />
+  <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; background-color: #1e1e1e; color: #f0f0f0;}
     #map, #sidebar, #basemap-switcher { display: none; }
@@ -975,6 +976,14 @@ editBtn.style.verticalAlign = "top";
     }
 
     document.getElementById('saveChanges').addEventListener('click', zapiszZmiany);
+
+     document.addEventListener("DOMContentLoaded", () => {
+    twemoji.parse(document.body, {
+      folder: "svg",
+      ext: ".svg"
+    });
+  });
+    
   </script>
 </body>
 </html>
