--- a/index.html
+++ b/index.html
@@ -357,12 +357,15 @@ body, #sidebar, #basemap-switcher {
       }
     }
 
- function createEmojiIcon(e, warstwa = "") {
-  if (!e || e === '📍') {
-    return L.icon({
-      iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
-      iconSize: [16, 25],       // zmniejszona wielkość
-      iconAnchor: [6, 25]       // środek szerokości, dół wysokości (czubek pinezki)
+function createEmojiIcon(emojiOrUrl, warstwa = "") {
+  const isUrl = emojiOrUrl && emojiOrUrl.startsWith("http");
+
+  if (isUrl) {
+    return L.divIcon({
+      className: 'emoji-marker',
+      html: `<img src="${emojiOrUrl}" width="28" height="28" style="vertical-align: middle;">`,
+      iconSize: [32, 32],
+      iconAnchor: [16, 32]
     });
   }
 
@@ -370,11 +373,12 @@ body, #sidebar, #basemap-switcher {
 
   return L.divIcon({
     className: 'emoji-marker',
-    html: `<span class="${cls}">${e}</span>`,
+    html: `<span class="${cls}">${emojiOrUrl}</span>`,
     iconSize: [32, 32],
     iconAnchor: [16, 32]
   });
 }
+
   
 
     function initEmojiDatalist() {
