--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
      1px -1px 0 orange,
     -1px  1px 0 gold,
      1px  1px 0 orange;
+
+          
 }
   .emoji-marker span {
   font-family: 'Noto Color Emoji', sans-serif;
@@ -126,6 +128,10 @@
     -1px  1px 0 #000,
      1px  1px 0 #000;
   */
+     filter: drop-shadow(0 0 1px black)
+          drop-shadow(0 0 1px black)
+          drop-shadow(0 0 1px black)
+          drop-shadow(0 0 1px black);
 }
 
     #geosearch {
