--- a/index.html
+++ b/index.html
@@ -264,22 +264,12 @@ body, #sidebar, #basemap-switcher {
 }
 .photo-gallery {
   display: flex;
-  align-items: center;
+  overflow-x: auto;
+  gap: 2px;
   margin-bottom: 4px;
 }
-.gallery-images {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-}
-.gallery-images img {
-  width: 33.33%;
-}
-.gallery-prev, .gallery-next {
-  cursor: pointer;
-  user-select: none;
-  padding: 0 4px;
-  font-size: 20px;
+.photo-gallery img {
+  flex: 0 0 auto;
 }
 #photoModal {
   display: none;
@@ -501,51 +491,37 @@ function emojiHtml(str) {
     function renderGallery(gallery) {
       if (!gallery) return;
       const slug = gallery.dataset.slug;
-      let start = parseInt(gallery.dataset.start || '0');
       const photos = getStoredPhotos(slug);
-      if (photos.length <= 0) { gallery.innerHTML = ''; return; }
-      start = Math.max(0, Math.min(start, Math.max(0, photos.length - 3)));
-      gallery.dataset.start = start;
       gallery.innerHTML = '';
-      if (start > 0) {
-        const prev = document.createElement('span');
-        prev.className = 'gallery-prev';
-        prev.textContent = '◀️';
-        gallery.appendChild(prev);
-      }
-      const wrap = document.createElement('div');
-      wrap.className = 'gallery-images';
-      photos.slice(start, start + 3).forEach(src => {
+      if (photos.length === 0) return;
+      photos.forEach(src => {
         const img = document.createElement('img');
         img.src = src;
         img.className = 'popup-photo';
-        wrap.appendChild(img);
+        gallery.appendChild(img);
       });
-      gallery.appendChild(wrap);
-      if (start + 3 < photos.length) {
-        const next = document.createElement('span');
-        next.className = 'gallery-next';
-        next.textContent = '▶️';
-        gallery.appendChild(next);
-      }
+      adjustGalleryLayout(gallery);
+    }
+
+    function adjustGalleryLayout(gallery) {
+      const imgs = gallery.querySelectorAll('img');
+      const count = imgs.length;
+      imgs.forEach(img => {
+        if (count === 1) {
+          img.style.width = '100%';
+        } else if (count === 2) {
+          img.style.width = 'calc((100% - 2px) / 2)';
+        } else {
+          img.style.width = 'calc((100% - 4px) / 3)';
+        }
+      });
     }
 
     function setupGallery(gallery) {
       if (!gallery) return;
       renderGallery(gallery);
       gallery.addEventListener('click', e => {
-        const slug = gallery.dataset.slug;
-        let start = parseInt(gallery.dataset.start || '0');
-        const photos = getStoredPhotos(slug);
-        if (e.target.classList.contains('gallery-prev')) {
-          start = Math.max(0, start - 3);
-          gallery.dataset.start = start;
-          renderGallery(gallery);
-        } else if (e.target.classList.contains('gallery-next')) {
-          start = Math.min(start + 3, Math.max(0, photos.length - 3));
-          gallery.dataset.start = start;
-          renderGallery(gallery);
-        } else if (e.target.tagName === 'IMG') {
+        if (e.target.tagName === 'IMG') {
           openPhotoModal(e.target.src);
         }
       });
@@ -559,7 +535,6 @@ function emojiHtml(str) {
         if (idx >= files.length) {
           storePhotos(slug, existing);
           if (gallery) {
-            gallery.dataset.start = Math.max(0, existing.length - 3);
             renderGallery(gallery);
           }
           return;
@@ -593,7 +568,7 @@ function emojiHtml(str) {
     function createPopupHtml(p) {
       const slug = slugify(p.nazwa || '');
       return `
-        <div class="photo-gallery" data-slug="${slug}" data-start="0"></div>
+        <div class="photo-gallery" data-slug="${slug}"></div>
         <b>${p.emoji ? emojiHtml(p.emoji) + ' ' : ''}${p.nazwa}</b>
         <div style="border-top:1px solid #444;"></div>
         <div style="height:4px;"></div>
@@ -1199,16 +1174,12 @@ editBtn.style.verticalAlign = "top";
       folder: "svg",
       ext: ".svg"
     });
-    const closeBtn = document.getElementById('photoModalClose');
-    if (closeBtn) {
-      closeBtn.addEventListener('click', () => {
-        document.getElementById('photoModal').style.display = 'none';
-      });
-    }
     const modal = document.getElementById('photoModal');
     if (modal) {
       modal.addEventListener('click', e => {
-        if (e.target === modal) modal.style.display = 'none';
+        if (e.target === modal || e.target.id === 'photoModalClose') {
+          modal.style.display = 'none';
+        }
       });
     }
 
