gwiazda sztosy fix

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 }
   .emoji-marker span {
   font-family: 'Noto Color Emoji', sans-serif;
-  font-size: 28px;
+ /* font-size: 28px; */
   line-height: 32px;
 }
 
@@ -318,14 +318,11 @@ body, #sidebar, #basemap-switcher {
 }
 .sztosy-gwiazda {
   position: absolute;
-  top: -6px;
+  top: -8px;
   right: -6px;
   font-size: 14px;
-  background: gold;
-  border-radius: 50%;
   padding: 1px;
   line-height: 1;
-  box-shadow: 0 0 2px #000;
   z-index: 10;
 }
 
