--- a/index.html
+++ b/index.html
@@ -324,6 +324,10 @@ body, #sidebar, #basemap-switcher {
   padding: 1px;
   line-height: 1;
   z-index: 10;
+       filter: drop-shadow(0 0 1px red)
+          drop-shadow(0 0 1px red)
+          drop-shadow(0 0 1px red)
+          drop-shadow(0 0 1px red);
 }
 
   </style>
